--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,7 @@
+<h1>Login</h1>
 <small *ngIf='invalidLogin'>{{errorMessage}}</small>
 <div>
     User name: <input type="text" name="username" [(ngModel)]="username">
     Password: <input type="password" name="password" [(ngModel)]="password">
-    <button (click)=handleLogin()> Login </button>
+    <button class="btn btn-success mx-2 " (click)=handleLogin()> Login </button>
 </div>
