--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,9 @@
-<div>
-    Welcome - {{name}}
+<h1>Welcome</h1>
+<div class="container">
+    <div>
+        Welcome - {{name}}
+    </div>
+    <div>
+        Todos <a routerLink="/todos">here</a>
+    </div> 
 </div>
-<div>
-    Todos <a routerLink="/todos">here</a>
-</div>
-
