--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -6,4 +6,8 @@
     <div>
         Todos <a routerLink="/todos">here</a>
     </div> 
+
+    <div class="container">Click here to get customized welcome message
+        <button (click)="getWelcomeMessage()" class="btn btn-success">Get Welcome Message</button>
+    </div>
 </div>
